# taskwarrior-hooks

./: Cargo.toml  README.md  justfile
hooks/: on-add-priority.sh  on-exit.count.sh  on-modify.reschedule.sh
test_data/: taskchampion.sqlite3
