[package]
name = "taskwarrrior-hooks"
version = "0.1.0"
edition = "2024"

keywords = ["taskwarrior", "todo"]
categories = ["command-line-utilities"]
license = "GPL-3.0"

[dependencies]
chrono = {version = "0.4.40", features = ["serde"]}
regex = "1.11.1"
rusqlite = "0.34.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
task-hookrs = "0.9.0"
